syntax = "proto3";

package filePackage;

service FileManagement {
    rpc SaveFile(FileRequest) returns (FileResponse) {};
    rpc DeleteFile(DeleteRequest) returns (DeleteResponse) {};
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse) {};
}

message FileRequest {
    int32 projectName = 1;
    string fileName = 2;
    string extension = 3;
    bytes fileString = 4;
}

message FileResponse {
    int32 response = 1;
}

message DeleteRequest {
    int32 idFile = 1;
}

message DeleteResponse {
    int32 response = 1;
}

message DownloadRequest {
    int32 idFile = 1;
}

message DownloadResponse {
    bytes fileContent = 1;
}